# lorem-lib

./: .gitmodules  CMakeLists.txt  LICENSE  PREFIX  README.md  library.cmake
2ndparty/: CMakeLists.txt  download.sh
demo/: CMakeLists.txt
demo/file/: CMakeLists.txt  main.cpp
demo/lorem_ipsum/: CMakeLists.txt  main.cpp
include/pfs/lorem/: exports.hpp  file.hpp  lang_domain.hpp  lorem_ipsum.hpp  namespace.hpp  person.hpp  utils.hpp  wait_atomic_bool.hpp  wait_atomic_counter.hpp  wait_bitmatrix.hpp
scripts/: build-linux.sh  build.cxx11.cmd
src/: CMakeLists.txt  file.cpp  lang_domain.cpp  lorem_ipsum.cpp  person.cpp  person_impl.hpp  utils.cpp  wait_atomic_bool.cpp  wait_atomic_counter.cpp
src/lang_domains/en_US/: person.cpp
src/lang_domains/ru_RU/: person.cpp
