################################################################################
# Copyright (c) 2023-2025 Vladislav Trifochkin
#
# This file is part of `lorem-lib`.
#
# Changelog:
#      2023.04.19 Initial version.
#      2025.08.21 Added file demo.
################################################################################
add_subdirectory(lorem_ipsum)
add_subdirectory(file)
